# rust_excel_reader

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: basic_usage.rs  drawings.rs  raw_elements.rs  sample.xlsx  workbook_drawing.xlsx
src/: common_types.rs  excel.rs  helper.rs  lib.rs  main.rs
src/packaging/: mod.rs  relationship.rs
src/processed/: mod.rs
src/processed/drawing/: mod.rs
src/processed/drawing/common_types/: adjust_angle.rs  adjust_coordinate.rs  extent.rs  mod.rs  offset.rs  pen_alignment.rs  position.rs  rectangle_alignment.rs
src/processed/drawing/effect/: blend.rs  blur.rs  color_change.rs  effect_container.rs  effect_reference.rs  effect_style.rs  glow.rs  hue_saturation_luminance.rs  inner_shadow.rs  luminance.rs  mod.rs  outer_shadow.rs  preset_shadow.rs  reflection.rs  relative_offset.rs  soft_edge.rs  tint.rs  transform.rs
src/processed/drawing/fill/: blip_fill.rs  fill_rectangle.rs  gradient_fill.rs  mod.rs  pattern_fill.rs  preset_pattern_values.rs  tile.rs  tile_flip.rs
src/processed/drawing/graphic/: graphic_frame.rs  mod.rs
src/processed/drawing/image/: blip.rs  mod.rs  picture.rs
src/processed/drawing/line/: compound_line.rs  dash_stop.rs  join_type.rs  line_cap.rs  line_dash.rs  line_end.rs  mod.rs  outline.rs  preset_line_dash.rs
src/processed/drawing/scene/: backdrop.rs  camera.rs  light_rig.rs  mod.rs  rotation.rs  scene_3d_properties.rs
src/processed/drawing/shape/: adjust_handle_polar.rs  adjust_handle_type.rs  adjust_handle_xy.rs  bevel.rs  black_white_mode.rs  connection_shape.rs  connection_site.rs  custom_geometry.rs  geometry.rs  mod.rs  preset_geometry_shape.rs  (+5 more)
src/processed/shared/: hyperlink.rs
src/processed/spreadsheet/: mod.rs  sheet_basic_info.rs
src/raw/: mod.rs
src/raw/drawing/: mod.rs  st_types.rs  theme.rs  theme_elements.rs
src/raw/spreadsheet/: ct_types.rs  mod.rs
(+382 files in other folders)
