[package]
name = "excel_reader"
description = "An Excel reader in pure rust."
version = "0.2.0"
edition = "2021"
authors = ["itsuki <itsuki.enjoy@gmail.com>"]
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["excel", "xlsx", "xml"]
categories = ["parsing", "text-processing"]
repository = "https://github.com/0Itsuki0/rust_excel_reader/tree/master"
rust-version = "1.83.0"


[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
quick-xml = { version = "0.37.2", features = ["encoding"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
urlencoding = "2.1.3"
zip = "2.6.1"


[dev-dependencies]
serde_json = "1.0.140"
excel_reader = { path = ".", features = ["serde"] }


[features]
default = []


[package.metadata.docs.rs]
features = ["serde"]
